--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Sistema de votación de profesores",
   "scripts": {
-    "dev": "npx http-server -p 3000 -o",
-    "build": "node build.js"
+    "dev": "npx http-server -p 3000 -o"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
